--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,20 @@
 .container {
   padding: 0 2rem;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+
+  background-color: rgba(25, 25, 25, 0.1);
+}
+
+.map {
+  flex: 1;
+  background-color: rgba(25, 25, 25, 0.15);
+}
+
+.start {
+  flex: 1;
+  background-color: rgba(25, 25, 25, 0.1);
 }
 
 .main {
